# knative-rust-axum

./: .gitignore  Cargo.toml  README.md  func.yaml
.github/workflows/: ci.yml
src/: main.rs
