[package]
name = "function"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
debug = 0
incremental = true
lto = true
opt-level = "z"
strip = "symbols"

[dependencies]
axum = { version = "0.7"}
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = {  version = "1" }
tracing-subscriber = "0.3"
tracing = "0.1"